--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
-    compile group: 'com.aparapi', name: 'aparapi', version:'1.8.0'
+    compile group: 'com.aparapi', name: 'aparapi', version:'1.9.0'
+    compile group: 'com.aparapi', name: 'aparapi-jni', version:'1.4.1'
 }
 version '1.0-SNAPSHOT'
