added .vs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,6 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 src/main/resources/
+
+# Visual Studio
+.vs
