--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jdk:
 
 script:
   - ./gradlew build --scan -s
+  - ./gradlew goJF
+  - ./gradlew verGJF
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
