--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     compile group: 'com.aparapi', name: 'aparapi-jni', version:'1.4.1'
     implementation 'com.github.AutonomousCarProject:raspivid-j:0.1.0'
     implementation 'org.bidib.com.pi4j:pi4j-distribution:1.2.M1'
+    classpath "gradle.plugin.com.github.sherter.google-java-format:google-java-format-gradle-plugin:0.7.1"
 }
 version '1.0-SNAPSHOT'
