--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'com.github.sherter.google-java-format'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
