--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,22 @@ allprojects {
         mavenCentral()
         maven { url "http://repo.maven.apache.org/maven2" }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://oss.sonatype.org/content/groups/public' }
     }
 }
 
 dependencies {
     compile group: 'com.aparapi', name: 'aparapi', version:'1.9.0'
     compile group: 'com.aparapi', name: 'aparapi-jni', version:'1.4.1'
-    implementation 'com.github.AutonomousCarProject:raspivid-j:0.1.0'
-    implementation 'org.bidib.com.pi4j:pi4j-distribution:1.2.M1'
+    compile 'com.github.AutonomousCarProject:raspivid-j:0.1.0'
+    compile 'com.pi4j:pi4j-core:1.2-SNAPSHOT'
 }
 version '1.0-SNAPSHOT'
+
+jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+
+    manifest {
+        attributes 'Main-Class': 'com.apw.test.TestPWM'
+    }
+}
