--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,14 @@ allprojects {
         mavenCentral()
         maven { url "http://repo.maven.apache.org/maven2" }
         maven { url 'https://jitpack.io' }
-        maven { url 'https://oss.sonatype.org/content/groups/public' }
     }
 }
 
 dependencies {
     compile group: 'com.aparapi', name: 'aparapi', version:'1.9.0'
     compile group: 'com.aparapi', name: 'aparapi-jni', version:'1.4.1'
-    compile 'com.github.AutonomousCarProject:raspivid-j:0.1.0'
-    compile 'com.pi4j:pi4j-core:1.2-SNAPSHOT'
+    implementation 'com.github.AutonomousCarProject:raspivid-j:0.1.0'
+    implementation 'org.bidib.com.pi4j:pi4j-distribution:1.2.M1'
 }
 
 buildScan {
