--- a/.gitignore
+++ b/.gitignore
@@ -74,32 +74,32 @@ local.properties
 ### Git ###
 *.orig
 
-### Intellij ###
+
+# Created by https://www.gitignore.io/api/intellij+all
+
+### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-#.idea/**/workspace.xml
-#.idea/**/tasks.xml
-#.idea/**/usage.statistics.xml
-#.idea/**/dictionaries
-#.idea/**/shelf
-## Important not to check-in these settings, just "import" project using build.gradle when using intelliJ
-.idea
-*.iml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
 # Sensitive or high-churn files
-#.idea/**/dataSources/
-#.idea/**/dataSources.ids
-#.idea/**/dataSources.local.xml
-#.idea/**/sqlDataSources.xml
-#.idea/**/dynamic.xml
-#.idea/**/uiDesigner.xml
-#.idea/**/dbnavigator.xml
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
 # Gradle
-#.idea/**/gradle.xml
-#.idea/**/libraries
+.idea/**/gradle.xml
+.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -128,7 +128,7 @@ out/
 atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
-#.idea/replstate.xml
+.idea/replstate.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -137,7 +137,24 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
-#.idea/httpRequests
+.idea/httpRequests
+
+### Intellij+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+
+.idea/
+
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
+
+
+# End of https://www.gitignore.io/api/intellij+all
+
 
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
